# mini-bpm-engine

./: .antigravityignore  .dockerignore  .gitignore  AGENT_GUIDELINES.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  TASK_MEMORY.md  devbox.json  docker-compose.yaml  engine_logs.jsonl  implementation_plan.md  openapi.yaml  patch.py  patch2.py  patch3.py  patch_readme.py  replace_locks.py
.agent/: manifest.json
.agent/rules/: 01_GLOBAL_DIRECTIVES.md  02_GRAPH_FIRST_NAVIGATION.md  03_GRAPH_MAINTENANCE.md  04_TASK_MEMORY_PROTOCOL.md  AGENT_CONVENTIONS.md  AGENT_GUIDELINES.md  BPMN_WORKFLOW_ENGINE.md  CLAUDE.md  GRAPH_MAINTENANCE.md  NATS_MESSAGE_BROKER.md  ORCHESTRATOR_AGENT.md  PROJECT_CONTEXT.md  RUST_AGENT_RULES.md  RUST_ENGINE_AGENT.md  TASK_MEMORY_PROTOCOL.md  TAURI_BACKEND_AGENT.md  TAURI_REACT_UI_AGENT.md  graphify.md
.agent/skills/bpmn-modeling/: SKILL.md
.agent/skills/bpmninja-agent-orchestrator-evolver/: SKILL.md
.agent/skills/bpmninja-agent-orchestrator-evolver/scripts/: orchestrator-health-oracle.sh  polling-oracle.sh  retry-oracle.sh
.agent/skills/bpmninja-bpmn-compliance-evolver/: SKILL.md
.agent/skills/bpmninja-bpmn-compliance-evolver/scripts/: compliance-oracle.sh  coverage-oracle.sh  spec-validation-oracle.sh
.agent/skills/bpmninja-bpmn-parser-evolver/: SKILL.md
.agent/skills/bpmninja-bpmn-parser-evolver/scripts/: fuzzing-oracle.sh  parser-health-oracle.sh  performance-oracle.sh
.agent/skills/bpmninja-ci-cd-evolver/: SKILL.md
.agent/skills/bpmninja-ci-cd-evolver/scripts/: ci-health-oracle.sh  coverage-oracle.sh  release-oracle.sh
.agent/skills/bpmninja-desktop/: SKILL.md
.agent/skills/bpmninja-desktop-tauri-evolver/: SKILL.md
.agent/skills/bpmninja-dev-process-evolver/: SKILL.md
.agent/skills/bpmninja-documentation-evolver/: SKILL.md
.agent/skills/bpmninja-engine/: SKILL.md
.agent/skills/bpmninja-engine-core-evolver/: SKILL.md
.agent/skills/bpmninja-engine-server-evolver/: SKILL.md
.agent/skills/bpmninja-external-task-client/: SKILL.md
.agent/skills/bpmninja-parser/: SKILL.md
.agent/skills/bpmninja-persistence-nats-evolver/: SKILL.md
.agent/skills/bpmninja-quality/: SKILL.md
.agent/skills/bpmninja-rust-test-evolver/: SKILL.md
.agent/skills/bpmninja-server/: SKILL.md
.agent/skills/engine-core/: SKILL.md
.agent/skills/engine-server/: SKILL.md
.agent/skills/nats-persistence/: SKILL.md
.agent/skills/rust-bpmn-workflow-engine/: SKILL.md
.agent/skills/tauri-frontend/: SKILL.md
.agent/workflows/: check.md  phase1-timers-messages-errors.md  verify-all.md  verify-ui.md  verify.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  docker-publish.yml  fuzzing.yml  mutation-tests.yml  pages.yml  release.yml  update-quality-metrics.yml
agent-orchestrator/: Cargo.toml
agent-orchestrator/src/: main.rs
api-spec/: main.tsp  package-lock.json  package.json  tspconfig.yaml
bpmn-ninja-external-task-client/example/: simple-worker.ts
bpmn-parser/: Cargo.toml
bpmn-parser/src/: bpmn_parser.rs  models.rs  parser.rs  tests.rs
desktop-tauri/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
desktop-tauri/playwright-report/: index.html
desktop-tauri/src/: App.tsx  ConditionPropertiesProvider.ts  DeployedProcesses.tsx  ErrorBoundary.tsx  HistoryTimeline.tsx  InstanceViewer.tsx  Instances.tsx  Modeler.tsx  Monitoring.tsx  ScriptPropertiesProvider.ts  Settings.tsx  VariableEditor.tsx  index.css  vite-env.d.ts
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/capabilities/: desktop.json
desktop-tauri/src-tauri/icons/: icon.icns
desktop-tauri/src-tauri/src/: api_helpers.rs  main.rs  sse_consumer.rs  state.rs
desktop-tauri/src-tauri/src/commands/: deploy.rs  files.rs  instances.rs  messages.rs  mod.rs  monitoring.rs  tasks.rs
desktop-tauri/src/lib/: tauri.ts
desktop-tauri/src/shared/lib/: tauri.ts
desktop-tauri/tests/e2e/: app.spec.ts  fix_tests.cjs
docs/: architecture.md  index.html  openapi.yaml  quality-badges.json  quality-metrics.json
engine-core/: Cargo.toml
engine-core/benches/: engine_bench.rs
engine-core/src/: condition.rs  engine.rs  error.rs  external_task.rs  history.rs  lib.rs  model.rs  persistence.rs  persistence_in_memory.rs  script_runner.rs  service_task.rs  tests.rs  timer_definition.rs
engine-core/src/adapter/: in_memory.rs  mod.rs
engine-core/src/domain/: definition.rs  element.rs  tests.rs  timer.rs
engine-core/src/engine/: boundary.rs  definition_ops.rs  events.rs  executor.rs  gateway.rs  instance_ops.rs  instance_store.rs  message_processor.rs  mod.rs  persistence_ops.rs  process_start.rs  registry.rs  retry_queue.rs  service_task.rs  stress_tests.rs  tests.rs  timer_processor.rs  types.rs  user_task.rs
engine-core/src/engine/executor/: mod.rs  next_action.rs
engine-core/src/engine/handlers/: events.rs  gateways.rs  sub_processes.rs  tasks.rs
engine-core/src/engine/tests/: stress_tests.rs  unit_tests.rs
engine-core/src/history/: mod.rs
engine-core/src/port/: persistence.rs
engine-core/src/runtime/: instance.rs  pending.rs
engine-core/src/scripting/: runner.rs
engine-core/tests/: bpmn_compliance.rs  complex_gateway_integration.rs
engine-server/: Cargo.toml  Dockerfile
engine-server/src/: lib.rs  log_buffer.rs  main.rs  observability.rs  server.rs  startup.rs
engine-server/src/server/: deploy.rs  events.rs  files.rs  history.rs  instances.rs  messages.rs  mod.rs  monitoring.rs  state.rs  tasks.rs  timers.rs
engine-server/tests/: e2e_deploy.rs  e2e_file_variables.rs  e2e_files.rs  e2e_gateways.rs  e2e_history.rs  e2e_lifecycle.rs  e2e_monitoring.rs  e2e_service_tasks.rs  e2e_start_errors.rs  e2e_stress.rs  e2e_variables.rs  e2e_versioning.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_deploy_roundtrip.rs  fuzz_history_diff.rs  fuzz_server_payloads.rs
graphify-out/: GRAPH_REPORT.md  graph.json
persistence-memory/: Cargo.toml
persistence-memory/src/: lib.rs
persistence-nats/: Cargo.toml
persistence-nats/src/: client.rs  lib.rs  persistence.rs  tests.rs  trait_impl.rs
(+53 files in other folders)
