[workspace]
members = [
    "engine-core",
    "bpmn-parser",
    "persistence-nats",
    "persistence-memory",
    "agent-orchestrator",
    "engine-server"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
