[package]
name = "agent-orchestrator"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json.workspace = true
