[package]
name = "bpmn-parser"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
engine-core = { path = "../engine-core" }
quick-xml = { version = "0.39", features = ["serialize", "overlapped-lists"] }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
croner = "3"
chrono = { version = "0.4", features = ["serde"] }
