[package]
name = "engine-core"
version = "0.7.18"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
dashmap = "6"
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
async-trait = "0.1"
rhai = { version = "1.19.0", features = ["serde", "sync"] }
croner = "3"
metrics = "0.24"
[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "engine_bench"
harness = false
