[package]
name = "engine-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
engine-core = { path = "../engine-core" }
bpmn-parser = { path = "../bpmn-parser" }
persistence-nats = { path = "../persistence-nats" }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { workspace = true }

