[package]
name = "engine-server"
version = "0.6.3"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["multipart", "tokio"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
engine-core = { path = "../engine-core" }
bpmn-parser = { path = "../bpmn-parser" }
persistence-nats = { path = "../persistence-nats" }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "multipart"] }
tokio = { workspace = true }

