[package]
name = "engine-server"
version = "0.7.18"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["multipart", "tokio"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
engine-core = { path = "../engine-core" }
bpmn-parser = { path = "../bpmn-parser" }
persistence-nats = { path = "../persistence-nats" }
async-nats = "0.47"
futures = "0.3"
uuid = { version = "1.23", features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4.44", features = ["serde"] }

# Observability — Prometheus metrics
# Note: opentelemetry-prometheus is officially discontinued (v0.31).
# The `metrics` ecosystem is the idiomatic Rust choice for Prometheus export.
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
metrics-process = "2.4"
tower = "0.5"
pin-project-lite = "0.2"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "multipart"] }
tokio = { workspace = true }

