[package]
name = "bpmninja-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Dependencies for fuzz targets
[dependencies]
libfuzzer-sys = "0.4"
engine-core = { path = "../engine-core" }
bpmn-parser = { path = "../bpmn-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rhai = "1.24"
arbitrary = { version = "1", features = ["derive"] }
croner = "3.0"
chrono = "0.4"
uuid = "1"
tokio = { version = "1", features = ["rt", "macros"] }

# Prevent this crate from interfering with the main workspace
# cargo-fuzz manages its own build profile
[[bin]]
name = "fuzz_bpmn_parser"
path = "fuzz_targets/fuzz_bpmn_parser.rs"
doc = false

[[bin]]
name = "fuzz_condition"
path = "fuzz_targets/fuzz_condition.rs"
doc = false

[[bin]]
name = "fuzz_rhai_script"
path = "fuzz_targets/fuzz_rhai_script.rs"
doc = false

[[bin]]
name = "fuzz_iso8601_duration"
path = "fuzz_targets/fuzz_iso8601_duration.rs"
doc = false

[[bin]]
name = "fuzz_token_deserialize"
path = "fuzz_targets/fuzz_token_deserialize.rs"
doc = false

[[bin]]
name = "fuzz_cron_expression"
path = "fuzz_targets/fuzz_cron_expression.rs"
doc = false

[[bin]]
name = "fuzz_deploy_roundtrip"
path = "fuzz_targets/fuzz_deploy_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_history_diff"
path = "fuzz_targets/fuzz_history_diff.rs"
doc = false

[[bin]]
name = "fuzz_server_payloads"
path = "fuzz_targets/fuzz_server_payloads.rs"
doc = false

[workspace]
