[package]
name = "persistence-nats"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
engine-core = { path = "../engine-core" }
async-nats = "0.47"
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1", features = ["derive"] }
futures = "0.3.32"
uuid = "1.22.0"
tracing = { workspace = true }
async-trait = "0.1.89"
chrono = "0.4.44"
base64 = "0.22.1"
